refactor: js, html, css 디렉토리 조정

--- a/src/main/resources/templates/manualLotto.html
+++ b/src/main/resources/templates/manualLotto.html
@@ -39,6 +39,6 @@
         </div>
     </div>
 </form>
-<script type="text/javascript" src="lotto.js"></script>
+<script type="text/javascript" src="js/lotto.js"></script>
 </body>
 </html>
