refactor : UI 개선

--- a/src/main/resources/templates/lottoresult.html
+++ b/src/main/resources/templates/lottoresult.html
@@ -13,5 +13,8 @@
 5개 일치 (1500000원)- {{third}}개 <br>
 5개 일치, 보너스 볼 일치(30000000원) - {{second}}개 <br>
 6개 일치 (2000000000원)- {{first}}개 <br>
+<form action="/">
+    <input type="submit" value="시작으로 돌아가기">
+</form>
 </body>
 </html>
