--- a/src/main/resources/templates/purchaseresult.html
+++ b/src/main/resources/templates/purchaseresult.html
@@ -10,5 +10,10 @@
 {{#lottoTickets}}
 {{this}}<br>
 {{/lottoTickets}}
+<br>
+
+<form action="/">
+    <input type="submit" value="시작으로 돌아가기">
+</form>
 </body>
 </html>
