--- a/src/main/resources/templates/resultofround.html
+++ b/src/main/resources/templates/resultofround.html
@@ -29,6 +29,9 @@
 5개 일치 (1,500,000원)- {{third}}개 <br>
 5개 일치, 보너스 볼 일치(30,000,000원) - {{second}}개 <br>
 6개 일치 (2,000,000,000원)- {{first}}개 <br>
+<form action="/">
+    <input type="submit" value="시작으로 돌아가기">
+</form>
 </body>
 <script
         src='https://code.jquery.com/jquery-3.4.1.min.js'
