--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 <h1>에러 페이지</h1>
-ERROR!!
-{{message}}
+ERROR!! <br>
+{{message}} <br>
+<form action="/">
+    <input type="submit" value="시작으로 돌아가기">
+</form>
 </body>
 </html>
