--- a/src/main/resources/templates/lotto_result.html
+++ b/src/main/resources/templates/lotto_result.html
@@ -9,17 +9,17 @@
 
 ---------
 <br/>
-3개 일치 (5000원)- {{fifth}}개
+3개 일치 (5000원)- {{lottoResult.fifthCount}}개
 <br/>
-4개 일치 (50000원)- {{fourth}}개
+4개 일치 (50000원)- {{lottoResult.fourthCount}}개
 <br/>
-5개 일치 (1500000원)- {{third}}개
+5개 일치 (1500000원)- {{lottoResult.thirdCount}}개
 <br/>
-5개 일치, 보너스 볼 일치(30000000원) - {{second}}개
+5개 일치, 보너스 볼 일치(30000000원) - {{lottoResult.secondCount}}개
 <br/>
-6개 일치 (2000000000원)- {{first}}개
+6개 일치 (2000000000원)- {{lottoResult.firstCount}}개
 <br/>
-총 수익률은 {{totalEarningRate}}%입니다.
+총 수익률은 {{lottoResult.earningRate}}%입니다.
 
 <br/>
 <br/>
