--- a/src/main/resources/templates/noselect.html
+++ b/src/main/resources/templates/noselect.html
@@ -5,13 +5,9 @@
     <title>로또 게임</title>
 </head>
 <body>
-<h1>당첨 결과</h1>
+<h1>회차 선택</h1>
 구입한 로또가 존재하지 않습니다. <br>
-3개 일치 (5000원)- 0개 <br>
-4개 일치 (50000원)- 0개 <br>
-5개 일치 (1500000원)- 0개 <br>
-5개 일치, 보너스 볼 일치(30000000원) - 0개 <br>
-6개 일치 (2000000000원)- 0개 <br>
+선택하실 수 있는 회차가 존재하지 않습니다.
 <form action="/">
     <input type="submit" value="시작으로 돌아가기">
 </form>
