--- a/src/main/resources/templates/winninglottoinput.html
+++ b/src/main/resources/templates/winninglottoinput.html
@@ -8,15 +8,15 @@
 <h1>당첨 번호 입력</h1>
 <form action="/winninglotto/getresult" id="winning-lotto-form" method="post">
     <div class="lotto">
-        <input type=text class=winning-lotto-lottonumber1>
-        <input type=text class=winning-lotto-lottonumber2>
-        <input type=text class=winning-lotto-lottonumber3>
-        <input type=text class=winning-lotto-lottonumber4>
-        <input type=text class=winning-lotto-lottonumber5>
-        <input type=text class=winning-lotto-lottonumber6>
+        <input type=text class=winning-lotto-lottonumber1 placeholder="첫번째 숫자">
+        <input type=text class=winning-lotto-lottonumber2 placeholder="두번째 숫자">
+        <input type=text class=winning-lotto-lottonumber3 placeholder="세번째 숫자">
+        <input type=text class=winning-lotto-lottonumber4 placeholder="네번째 숫자">
+        <input type=text class=winning-lotto-lottonumber5 placeholder="다섯번째 숫자">
+        <input type=text class=winning-lotto-lottonumber6 placeholder="여섯번째 숫자">
         <input type=hidden id=winning-lotto name=winning-lotto>
     </div>
-    <input type="text" name="bonus-number">
+    <input type="text" name="bonus-number" placeholder="보너스 숫자">
     <input type="button" value="당첨 번호 생성" onclick=setwinninglotto()>
 </form>
 </body>
