ADD : 당첨번호 입력 페이지

--- a/src/main/resources/templates/lotto.html
+++ b/src/main/resources/templates/lotto.html
@@ -32,9 +32,9 @@
         </tbody>
     </table>
 </div>
-<form method="POST" action="/winLotto" id="postLottoes">
+<form method="POST" action="/winLotto" id="postLotto">
     <div hidden>
-        <input type="hidden" value="{{userLotto}}" name="lottoNumbers"/>
+        <input type="hidden" value="{{userLotto}}" name="userLotto"/>
         <input type="hidden" value="{{round}}" name="round"/>
     </div>
     <div id="bottom-panel" style="float: right; margin-right: 500px">
