--- a/src/main/resources/templates/lotto.html
+++ b/src/main/resources/templates/lotto.html
@@ -12,7 +12,6 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <h1 class="display-4">Lotto Game</h1>
-        <p class="lead">lotto lotto lotto lotto lotto lotto</p>
     </div>
 </div>
 <!-- USER DATA-->
@@ -166,7 +165,9 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    test
+                    {{#purchaseLotto}}
+                        {{.}} <br/>
+                    {{/purchaseLotto}}
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
@@ -187,7 +188,17 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    test
+                    당첨 로또 번호 : {{winningLotto}} <br/>
+                    당첨 보너스 번호 : {{winningLottoBonus}} <br/> <br/>
+
+                    3개 일치 (5000원)- {{fifth}}개<br/>
+                    4개 일치 (50000원)- {{fourth}}개<br/>
+                    5개 일치 (1500000원)- {{third}}개<br/>
+                    5개 일치, 보너스 볼 일치(30000000원) - {{second}}개<br/>
+                    6개 일치 (2000000000원)- {{first}}개<br/><br/>
+
+                    당첨 금액은 {{resultMoney}}원 입니다.<br/>
+                    총 수익률은 {{resultRate}}%입니다.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
