[로또 - 웹, DB] 올레 미션 제출합니다. (#64)
* add index.html which gets input of lotto game(input of money, manual lotto count, manual lotto numbers

* add dto for data transformation from client to server

* show user the generated lottos

* make LottosDTO file

* implement lotto game which behaves at web

* delete dtos, instead used sessions for global scoping

* make page which show lotto game history

* Update README.md

* set db_url as instance variable at ConnecHandler class

* add table schema file

* moved dao managing process to dbhandler class

* add user information and database name info at table schema file

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,20 @@
     <title>로또</title>
 </head>
 <body>
-Hello World!!
+{{#if error}}
+잘못된 입력입니다. 다시 입력해 주세요.
+{{/if}}
+
+<form action="/manual" method="post">
+    구입금액: <input name="money" type="text"/>
+    <br><br>
+    수동 로또 개수: <input name="manualLottoCount" type="text"/>
+    <input type="submit" value="입력"/>
+</form>
+<br>
+<form action="/history" method="get">
+    <button type="submit">게임 기록</button>
+</form>
+
 </body>
 </html>
