fix: result.html
ResultDto의 인스턴스 변수 prize를 그대로 쓰고 있었으므로 prizeResult로 변경

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -27,19 +27,19 @@
         {{# numbers }}
         {{.}}
         {{/ numbers }}
-        보너스볼: {{ bonusBall }}
+        보너스볼: {{ bonusNumber }}
         {{/ winningNumber }}
     </div>
     <div>
         <h1>당첨 결과</h1>
         {{# result }}
-        {{# prize }}
+        {{# prizeResult }}
         <p>1등 담첨 횟수 : {{ first }}</p>
         <p>2등 담첨 횟수 : {{ second }}</p>
         <p>3등 담첨 횟수 : {{ third }}</p>
         <p>4등 담첨 횟수 : {{ fourth }}</p>
         <p>5등 담첨 횟수 : {{ fifth }}</p>
-        {{/ prize }}
+        {{/ prizeResult }}
         <p> 총 당첨 금액: {{ winningMoney }}원</p>
         {{/ result }}
     </div>
