--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
+
     <title>로또</title>
 </head>
 <body>
-Hello World!!
+<div id="container">
+    <h1>로또</h1>
+
+    <p>
+        로또를 구입할 금액을 입력해 주세요.
+    </p>
+
+    <form action="/number" method="POST">
+        <input name="money" type="text"><br>
+        <input type="submit" value="다음">
+    </form>
+</div>
 </body>
 </html>
