--- a/src/main/resources/templates/lottoPaymentInfo.html
+++ b/src/main/resources/templates/lottoPaymentInfo.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Custom CSS -->
-    <link href="../css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
 
     <title>로또 구매</title>
 </head>
 
 <body>
     <section class="container">
+        <div class="text-right">{{name}} 님</div>
         <h1>로또 구매</h1>
         <form action="/buyLotto" method="post">
             <div class="form-group">
@@ -27,6 +28,9 @@
                 <label for="countOfManualLotto">수동 구매 개수</label>
                 <input type="number" id="countOfManualLotto" name="countOfManualLotto" class="form-control" />
                 <small class="form-text text-muted">구입한 개수 이하의 값을 입력해주세요.</small>
+                <input type="hidden" name="name" value={{name}} />
+                <input type="hidden" name="countOfLotto" value={{countOfLotto}} />
+                <input type="hidden" name="round" value={{round}} />
             </div>
             <button type="submit" class="btn btn-primary">구매하기</button>
         </form>
