feat: Add inquiring lotto game result by round

--- a/src/main/resources/templates/selectResult.html
+++ b/src/main/resources/templates/selectResult.html
@@ -13,7 +13,9 @@
 </head>
 <body>
 <blockquote class="blockquote">
-
+    {{#lottos}}
+    <p class="mb-0">{{lotto}}</p>
+    {{/lottos}}
 </blockquote>
 
 <!-- Optional JavaScript -->
