--- a/src/main/resources/templates/lotto_result.html
+++ b/src/main/resources/templates/lotto_result.html
@@ -20,40 +20,37 @@
 			<hr class="my-4">
 
 			<div class="container">
-				<div class="row mb-2 text-center">
+				<div class="mb-2">
 					<p class="h5">{{week}}주차 당첨 로또 번호</p>
 					<div class="btn-group-toggle " data-toggle="buttons">
+						{{#winningNumbers}}
 						<button type="button" class="btn btn-secondary mb-1" disabled>{{this}}</button>
-						<button type="button" class="btn btn-secondary mb-1" disabled>{{this}}</button>
-						<button type="button" class="btn btn-secondary mb-1" disabled>{{this}}</button>
-						<button type="button" class="btn btn-secondary mb-1" disabled>{{this}}</button>
-						<button type="button" class="btn btn-secondary mb-1" disabled>{{this}}</button>
-						<button type="button" class="btn btn-secondary mb-1" disabled>{{this}}</button>
+						{{/winningNumbers}}
 						<button type="button" class="btn btn-warning mb-1" disabled>{{bonusBall}}</button>
 					</div>
 				</div>
-				<div class="row mb-2">
+				<div class="mb-2">
 					<p>{{result}}</p>
 				</div>
-				<div class="row mb-2">
+				<div class="mb-2">
 					<p>{{incoming_rate}}</p>
 				</div>
-				<div class="row mb-2">
+				<div class="mb-2">
 					<p>3개 일치 (5000원)- 1개</p>
 				</div>
-				<div class="row mb-2">
+				<div class="mb-2">
 					<p>4개 일치 (50000원)- 0개</p>
 				</div>
-				<div class="row mb-2">
+				<div class="mb-2">
 					<p>5개 일치 (1500000원)- 0개</p>
 				</div>
-				<div class="row mb-2">
+				<div class="mb-2">
 					<p>5개 일치, 보너스 볼 일치(30000000원) - 0개</p>
 				</div>
-				<div class="row mb-2">
+				<div class="mb-2">
 					<p>6개 일치 (2000000000원)- 0개</p>
 				</div>
-				<div class="row mb-2">
+				<div class="mb-2">
 					<p>총 수익률은 30%입니다.</p>
 				</div>
 			</div>
