--- a/src/main/resources/templates/purchased_tickets.html
+++ b/src/main/resources/templates/purchased_tickets.html
@@ -19,12 +19,11 @@
 			<h3 class="display-4">구매한 로또</h3>
 			<hr class="my-4">
 			<div class="container">
-				<div class="row mb-2 text-center">
+				<div class="mb-4">
 					<p class="h5">구입 금액: {{money}}원</p>
-					<br />
 					<p class="h5">수동으로 {{amountOfCustom}}개, 자동으로 {{amountOfAuto}}개를 구매했습니다.</p>
 				</div>
-				<div class="row mb-2">
+				<div class="mb-2">
 					{{#lottos}}
 						<div class="btn-group-toggle " data-toggle="buttons">
 							<span class="badge badge-pill badge-secondary">{{@index}}</span>
@@ -33,7 +32,7 @@
 									<input type="checkbox" checked autocomplete="off" disable> {{this}}
 								</label>
 							{{/lottoNumbers}}
-						</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						</div>
 					{{/lottos}}
 				</div>
 			</div>
