조회하기  UI구현

--- a/src/main/resources/templates/view/lotto_result.html
+++ b/src/main/resources/templates/view/lotto_result.html
@@ -54,9 +54,8 @@
             <div class="form-group">
                 당첨 번호 : {{winningLotto}}<br/>
                 보너스 번호 : {{bonusBall}}<br/>
-
-                <h4 class="cover-heading">당첨 통계</h4><br/>
-
+                <br/>
+                <h4 class="cover-heading">당첨 통계</h4>
                 {{#result}}
                 {{this}} <br/>
                 {{/result}}
