--- a/src/main/resources/templates/view/lotto_check_round.html
+++ b/src/main/resources/templates/view/lotto_check_round.html
@@ -42,21 +42,23 @@
         <div class="inner">
             <h3 class="masthead-brand"><a class="masthead-brand" href="/home">로또 시뮬레이션</a></h3>
             <nav class="nav nav-masthead justify-content-center">
-                <a class="nav-link active" href="rule">로또 룰</a>
+                <a class="nav-link" href="check">조회하기</a>
                 <a class="nav-link" href="contact">연락처</a>
             </nav>
         </div>
     </header>
 
     <main role="main" class="inner cover">
-        <h1 class="cover-heading">로또 시뮬레이션이란?</h1>
-        <p class="lead">로또 시뮬레이션이란 로또 금액을 입력한뒤 <br/>
-            수동구매와 자동구매를 통해 로또 번호를 출력합니다. <br/>
-            그리고 당첨번호를 적으면 구매한 로또 번호와 비교해 <br/> 수익률을 나타내주는 시뮬레이션입니다.
-        </p>
-        <p class="lead">
-            <a href="/start" class="btn btn-lg btn-secondary">게임 시작!</a>
-        </p>
+        <form action="/check" class="was-validated ">
+            <h4>{{error_ckeck}}</h4>
+            <h4 class="cover-heading">회차를 입력해 주세요!</h4>
+            <div class="form-group">
+                <input class="form-control" type="text" id="checkRound" placeholder="회차 입력" name="checkRound" required>
+            </div>
+            <p class="lead">
+                <button type="submit" class="btn btn-success"> 확인</button>
+            </p>
+        </form>
     </main>
 
     <footer class="mastfoot mt-auto">
