--- a/src/main/resources/templates/view/lotto_contact.html
+++ b/src/main/resources/templates/view/lotto_contact.html
@@ -42,7 +42,7 @@
         <div class="inner">
             <h3 class="masthead-brand"><a class="masthead-brand" href="/home">로또 시뮬레이션</a></h3>
             <nav class="nav nav-masthead justify-content-center">
-                <a class="nav-link" href="rule">로또 룰</a>
+                <a class="nav-link" href="check">조회하기</a>
                 <a class="nav-link active" href="contact">연락처</a>
             </nav>
         </div>
