--- a/src/main/resources/templates/purchased_tickets.html
+++ b/src/main/resources/templates/purchased_tickets.html
@@ -37,13 +37,64 @@
 				</div>
 			</div>
 
+			<!-- Modal -->
+			<div class="modal fade" id="winningLottoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="exampleModalLabel">당첨 로또 번호</h5>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body">
+							<form id="lotto-form" action="/purchase/ticket" method="get" onsubmit="return checkMoney();">
+								<div class="container" id="purchasing">
+									<h5>당첨번호</h5>
+									<div class="form-row align-items-center mb-3">
+										<div class="col-sm-10 my-1">
+											<div class="input-group">
+												<input type="text" aria-label="num1" class="form-control" name="num1">
+												<input type="text" aria-label="num2" class="form-control" name="num2">
+												<input type="text" aria-label="num3" class="form-control" name="num3">
+												<input type="text" aria-label="num4" class="form-control" name="num4">
+												<input type="text" aria-label="num5" class="form-control" name="num5">
+												<input type="text" aria-label="num6" class="form-control" name="num6">
+											</div>
+										</div>
+									</div>
+									<h5>보너스 볼</h5>
+									<div class="form-row align-items-center">
+										<div class="col-sm-2 my-1">
+											<div class="input-group">
+												<input type="text" aria-label="bonusBall" class="form-control" name="bonusBall">
+											</div>
+										</div>
+									</div>
+								</div>
+							</form>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
+							<input type="submit" class="btn btn-primary" value="등록">
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<div class="col-auto mt-4 text-center">
+				<button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#winningLottoModal">당첨 로또번호 입력하기</button>
 				<a class="btn btn-outline-secondary" href="/statistics/win">당첨여부 확인</a>
 			</div>
 
 		</div>
 	</div>
 
+	<script type="text/javascript">
+		function submitWinningLotto() {
+			window.prompt("당첨로또 번호");
+		}
+	</script>
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
