--- a/src/main/resources/templates/final.html
+++ b/src/main/resources/templates/final.html
@@ -34,11 +34,12 @@
 <br>
 {{#final_results}}
 {{this}}<br>
-<br>
-<br>
 {{/final_results}}
 <br>
 <br>
+{{#final_stats}}
+    {{this}}<br>
+{{/final_stats}}
 
 </body>
 </html>
