--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
 
 			<div class="container">
 				<a class="btn btn-warning btn-lg btn-block" href="/purchase">로또 구입하기</a>
-				<button type="button" class="btn btn-warning btn-lg btn-block" data-toggle="modal" data-target="#winningLottoModal">지난 주 당첨로또 입력하기</button>
+				<button class="btn btn-warning btn-lg btn-block" data-toggle="modal" data-target="#winningLottoModal">지난 주 당첨로또 입력하기</button>
 				<a class="btn btn-warning btn-lg btn-block" href="/statistics/win">지난 당첨내역 보기</a>
 				<a class="btn btn-warning btn-lg btn-block" href="/purchase">당첨 통계</a>
 			</div>
@@ -32,27 +32,27 @@
 
 		<!-- Modal -->
 		<div class="modal fade" id="winningLottoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">당첨 로또 번호</h5>
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-					<div class="modal-body">
-						<form id="lotto-form" action="/purchase/ticket" method="get" onsubmit="return checkMoney();">
+			<form id="lotto-form" action="/win/input" method="post" onsubmit="return checkInputValues();">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="exampleModalLabel">당첨 로또 번호</h5>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body">
 							<div class="container">
 								<h5>당첨번호</h5>
 								<div class="form-row align-items-center mb-3">
 									<div class="col-sm-10 my-1">
 										<div class="input-group">
-											<input type="text" aria-label="num1" class="form-control" name="num1">
-											<input type="text" aria-label="num2" class="form-control" name="num2">
-											<input type="text" aria-label="num3" class="form-control" name="num3">
-											<input type="text" aria-label="num4" class="form-control" name="num4">
-											<input type="text" aria-label="num5" class="form-control" name="num5">
-											<input type="text" aria-label="num6" class="form-control" name="num6">
+											<input type="text" aria-label="num1" class="form-control" name="num1" id="num1">
+											<input type="text" aria-label="num2" class="form-control" name="num2" id="num2">
+											<input type="text" aria-label="num3" class="form-control" name="num3" id="num3">
+											<input type="text" aria-label="num4" class="form-control" name="num4" id="num4">
+											<input type="text" aria-label="num5" class="form-control" name="num5" id="num5">
+											<input type="text" aria-label="num6" class="form-control" name="num6" id="num6">
 										</div>
 									</div>
 								</div>
@@ -60,21 +60,43 @@
 								<div class="form-row align-items-center">
 									<div class="col-sm-2 my-1">
 										<div class="input-group">
-											<input type="text" aria-label="bonusBall" class="form-control" name="bonusBall">
+											<input type="text" aria-label="bonusBall" class="form-control" name="bonusBall" id="bonusBall">
 										</div>
 									</div>
 								</div>
 							</div>
-						</form>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
-						<input type="submit" class="btn btn-primary" value="등록">
+						</div>
+						<div class="modal-footer">
+							<input type="button" class="btn btn-secondary" data-dismiss="modal" value="닫기">
+							<input type="submit" class="btn btn-primary" value="등록">
+						</div>
 					</div>
 				</div>
-			</div>
+			</form>
 		</div>
 	</div>
+
+	<script type="text/javascript">
+		function checkInputValues() {
+			for (var i = 1; i <= 6; i++) {
+				var num = document.getElementById('num' + i).value;
+
+				if (isNaN(num) || num < 1 || num > 45) {
+					alert("당첨번호의 값이 올바르지 않습니다.");
+					document.getElementById('num' + i).focus();
+					return false;
+				}
+			}
+
+			var bonusBall = document.getElementById('bonusBall').value;
+			if (isNaN(bonusBall) || bonusBall < 1 || bonusBall > 45) {
+				alert("당첨번호의 값이 올바르지 않습니다.");
+				document.getElementById(bonusBall).focus();
+				return false;
+			}
+		}
+
+	</script>
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
