--- a/src/main/resources/templates/purchased_tickets.html
+++ b/src/main/resources/templates/purchased_tickets.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="ko">
+
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
@@ -39,27 +40,27 @@
 
 			<!-- Modal -->
 			<div class="modal fade" id="winningLottoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title" id="exampleModalLabel">당첨 로또 번호</h5>
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-								<span aria-hidden="true">&times;</span>
-							</button>
-						</div>
-						<div class="modal-body">
-							<form id="lotto-form" action="/purchase/ticket" method="get" onsubmit="return checkMoney();">
-								<div class="container" id="purchasing">
+				<form id="lotto-form" action="/win/input" method="post" onsubmit="return checkInputValues();">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="exampleModalLabel">당첨 로또 번호</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
+								<div class="container">
 									<h5>당첨번호</h5>
 									<div class="form-row align-items-center mb-3">
 										<div class="col-sm-10 my-1">
 											<div class="input-group">
-												<input type="text" aria-label="num1" class="form-control" name="num1">
-												<input type="text" aria-label="num2" class="form-control" name="num2">
-												<input type="text" aria-label="num3" class="form-control" name="num3">
-												<input type="text" aria-label="num4" class="form-control" name="num4">
-												<input type="text" aria-label="num5" class="form-control" name="num5">
-												<input type="text" aria-label="num6" class="form-control" name="num6">
+												<input type="text" aria-label="num1" class="form-control" name="num1" id="num1">
+												<input type="text" aria-label="num2" class="form-control" name="num2" id="num2">
+												<input type="text" aria-label="num3" class="form-control" name="num3" id="num3">
+												<input type="text" aria-label="num4" class="form-control" name="num4" id="num4">
+												<input type="text" aria-label="num5" class="form-control" name="num5" id="num5">
+												<input type="text" aria-label="num6" class="form-control" name="num6" id="num6">
 											</div>
 										</div>
 									</div>
@@ -67,19 +68,19 @@
 									<div class="form-row align-items-center">
 										<div class="col-sm-2 my-1">
 											<div class="input-group">
-												<input type="text" aria-label="bonusBall" class="form-control" name="bonusBall">
+												<input type="text" aria-label="bonusBall" class="form-control" name="bonusBall" id="bonusBall">
 											</div>
 										</div>
 									</div>
 								</div>
-							</form>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
-							<input type="submit" class="btn btn-primary" value="등록">
+							</div>
+							<div class="modal-footer">
+								<input type="button" class="btn btn-secondary" data-dismiss="modal" value="닫기">
+								<input type="submit" class="btn btn-primary" value="등록">
+							</div>
 						</div>
 					</div>
-				</div>
+				</form>
 			</div>
 
 			<div class="col-auto mt-4 text-center">
@@ -91,8 +92,23 @@
 	</div>
 
 	<script type="text/javascript">
-		function submitWinningLotto() {
-			window.prompt("당첨로또 번호");
+		function checkInputValues() {
+			for (var i = 1; i <= 6; i++) {
+				var num = document.getElementById('num' + i).value;
+
+				if (isNaN(num) || num < 1 || num > 45) {
+					alert("당첨번호의 값이 올바르지 않습니다.");
+					document.getElementById('num' + i).focus();
+					return false;
+				}
+			}
+
+			var bonusBall = document.getElementById('bonusBall').value;
+			if (isNaN(bonusBall) || bonusBall < 1 || bonusBall > 45) {
+				alert("당첨번호의 값이 올바르지 않습니다.");
+				document.getElementById(bonusBall).focus();
+				return false;
+			}
 		}
 	</script>
 
@@ -101,4 +117,6 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body></html>
+</body>
+
+</html>
