feat: add calculating result methods & attach to web UI

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,8 +25,7 @@
 			<div class="container">
 				<a class="btn btn-warning btn-lg btn-block" href="/purchase">로또 구입하기</a>
 				<button class="btn btn-warning btn-lg btn-block" data-toggle="modal" data-target="#winningLottoModal">지난 주 당첨로또 입력하기</button>
-				<a class="btn btn-warning btn-lg btn-block" href="/statistics/win">지난 당첨내역 보기</a>
-				<a class="btn btn-warning btn-lg btn-block" href="/purchase">당첨 통계</a>
+				<a class="btn btn-warning btn-lg btn-block" href="/win/result">당첨여부 확인</a>
 			</div>
 		</div>
 
