--- a/src/main/resources/templates/purchased_tickets.html
+++ b/src/main/resources/templates/purchased_tickets.html
@@ -85,7 +85,7 @@
 
 			<div class="col-auto mt-4 text-center">
 				<button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#winningLottoModal">당첨 로또번호 입력하기</button>
-				<a class="btn btn-outline-secondary" href="/statistics/win">당첨여부 확인</a>
+				<a class="btn btn-outline-secondary" href="/win/result">당첨여부 확인</a>
 			</div>
 
 		</div>
