--- a/src/main/resources/templates/purchasing_lotto.html
+++ b/src/main/resources/templates/purchasing_lotto.html
@@ -20,7 +20,7 @@
 			<h3 class="display-4">Purchase Lottery!</h3>
 			<hr class="my-4">
 
-			<form id="lotto-form" action="/purchase/ticket" method="get" onsubmit="return checkMoney();">
+			<form id="lotto-form" action="/purchase/ticket" method="post" onsubmit="return checkMoney();">
 				<div class="container" id="purchasing">
 					<h5>구입 금액</h5>
 					<small id="passwordHelpInline" class="text-muted">
